--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xml-stream",
+  "name": "@stc-hotels-mys/xml-stream",
   "description": "XML stream to JavaScript object converter based on Expat.",
   "keywords": [
     "xml",
@@ -7,7 +7,7 @@
     "expat"
   ],
   "license": "MIT",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "author": "AssistUnion <info@assistunion.com>",
   "maintainers": [
     "Anatoly Ressin <anatoly@assistunion.com>",
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/assistunion/xml-stream.git"
+    "url": "https://github.com/ikr/xml-stream.git"
   },
   "dependencies": {
     "node-expat": "^2.3.7",
